:construction: WIP: todo list module

--- a/app/code/Trenzalore/FreeItem/composer.json
+++ b/app/code/Trenzalore/FreeItem/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "trenzalore/freeitem",
+    "name": "trenzalore/module-freeitem",
     "description": "",
     "type": "magento2-module",
     "version": "1.0.0",
